2005-09-15  Rob Savoye  <rob@bertha.welcomehome.org>

	* daemon/main.cc: Include xml.h and msgs.h. Use new messaging
	system. 
	* lib/console.c: Make the console be non-blocking.
	* lib/msgs.cc: Add handlers for more tags. Make new methods to
	process and create more XML messages.
	* lib/msgs.h: Add enums for more message types. Make new methods
	to process and create more XML messages.

2005-08-25  Rob Savoye  <rob@cree.moongulch.net>

	* lib/xantrex-trace.cc: Change the heading to force a clear
	restart for polling the meters.
	* daemon/main.cc: Don't check the console when polling meters.

2005-08-24  Rob Savoye  <rob@cree.moongulch.net>

	* daemon/main.cc: The -p option doesn't take an argument. Also
	default to Xantrex mode when meter polling is specified.
	* lib/console.cc: Don't put the console in raw mode.
	* lib/mysql.cc: Use ostringstream to format query for meter_data.
	* lib/xantrex-trace.cc: Go down and then up through the
	meters. Set the appropriate field in the meter_data to match the
	read value.

2005-08-20  Rob Savoye  <rob@bertha.welcomehome.org>

	* daemon/main.cc (main): Add support for --help and --version.
	* client/cmd.cc (main):  Add support for --help and --version.

	* client/cmd.cc (main): Remove tcpip code, it's now inherited by
	the Msgs class.Use the new anydata() method to process socket
	messages. On an socket error, exit if you are the client, and
	restart the socket if you ar the daemon.
	* configure.ac: Increment version to 0.3.
	* lib/log.cc: Add operator for << (xmlChar *) so we can print
	XML nodes directly.
	* lib/log.h: Add operator for << (xmlChar *) so we can print
	XML nodes directly.
	* lib/msgs.cc: Inherit from Tcpip class. Have a daemon and
	client mode. Initialize the table of pointers and the network
	now.
	* lib/msgs.h: Inherit from Tcpip class. Have a daemon and
	client mode.
	* lib/tcpip.cc (anydata): Use a vector instead of an array.
	* lib/tcpip.h (anydata): Use a vector instead of an array.